RESOLVED FIXED267460
Scroll To Text Fragment Text Directives don't find text with additional unrendered white space in their node data.
https://bugs.webkit.org/show_bug.cgi?id=267460
Summary Scroll To Text Fragment Text Directives don't find text with additional unren...
Megan Gardner
Reported 2024-01-12 11:14:42 PST
Scroll To Text Fragment Text Directives don't find text with additional unrendered white space in their node data.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-12 11:15:00 PST
Megan Gardner
Comment 2 2024-01-12 11:19:39 PST
EWS
Comment 3 2024-01-13 15:06:59 PST
Committed 273016@main (ddae86e77763): <https://commits.webkit.org/273016@main> Reviewed commits have been landed. Closing PR #22720 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.